# leeme_api

./: Dockerfile  README.md  docker-compose.yaml  procfile  pyproject.toml  requirements.txt
data/: _.txt  a.txt  b.txt  c.txt  d.txt  e.txt  f.txt  g.txt  h.txt  i.txt  j.txt  k.txt  l.txt  ll.txt  m.txt  n.txt  o.txt  p.txt  q.txt  r.txt  s.txt  t.txt  u.txt  v.txt  w.txt  x.txt  y.txt  z.txt  ñ.txt
leeme_app/main/: main.py
leeme_app/main/app/word/domain/: words.py
leeme_app/main/app/word/domain/repository/: word_repository.py
leeme_app/main/app/word/domain/value_object/: word.py
leeme_app/main/app/word/infrastructure/controller/: get_words_filter_by_characters.py  words_response.py
leeme_app/main/app/word/infrastructure/repository/: file_word_repository.py
leeme_app/main/shared/domain/: command.py  command_handler.py  query.py  query_handler.py  query_response.py
leeme_app/main/shared/infrastructure/controller/: health.py  health_response.py
leeme_app/tests/app/word/domain/: test_words.py
leeme_app/tests/app/word/domain/value_object/: test_word.py
leeme_app/tests/app/word/infrastructure/repository/: test_file_word_repository.py
leeme_load/main/app/letter/application/use_case/: save_words.py
leeme_load/main/app/letter/domain/: letters.py
leeme_load/main/app/text/domain/: text.py
leeme_load/main/app/word/domain/: words.py
leeme_load/tests/: test_main.py
leeme_load/tests/app/letter/domain/: test_letters.py
leeme_load/tests/app/text/domain/: test_text.py
leeme_load/tests/app/word/domain/: test_words.py
(+21 files in other folders)
