[tool.poetry]
name = "leeme_app"
version = "0.0.1"
description = "Return word with characters expected"
authors = ["Diego Domínguez Herreros <diegoalbert500@gmail.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
pyupgrade = "^3.2.0"

[tool.poetry.dev-dependencies]
mypy = "^0.982"
yapf = "^0.32.0"
toml = "^0.10.2"
flake8 = "^5.0.4"
Flake8-pyproject = "^1.1.0"
pylint = "^2.15.3"
pytest = "^7.1.3"
pytest-xdist = "^2.5.0"
expects = "^0.9.0"
requests = "^2.31.0"

[tool.flake8]
ignore= ["E501", "E124","E203", "W291", "W503", "W504", "E302", "E303", "E251", "E125"]

[tool.yapf]
based_on_style = "google"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"